tests/errors/var_annotation_mismatch.ptt
// Codex audit P0-5: explicit annotations must constrain the
// initializer's type. `x is int "hi"` should be rejected.

use std/string

spark {
  x is int "hi"
}
